@@ -7,10 +7,12 @@ v2.7.1   - With NSIS exe installer, made Windows' icons show the version
 	   correctly.
 	 - Color picker now can show colors with the LUT applied.  This 
 	   makes the gui (zoom) respond a tad slower when the LUT is on.
-	 - Added switch in Preferences to show pixel color values after LUT
-	   or not.
+	   As such a preferences option was added.
+	 - Added switch in Preferences to show pixel color values after LUT.
 	 - Made DEB/RPM installer on Linux place an icon in desktop in
 	   any language locale.
+	 - DEB/RPM will register file associations (mime-types) to all of
+	   mrViewer's recognized files.
 
 v2.7.0   - Added ACEScsc files as IDTs to support DigitalLAD sample picture.
 	 - Made xml and ctl files never show as sequences of frames in
